# tic-tac-toe-minimax-game

./: .gitignore  README.md  demo_analisis.py  pyproject.toml
src/mi_proyecto_python/: minimax.py
src/tic-tac-toe-minimax-game/: tres_en_raya_pygame.py
src/tic_tac_toe_minimax_game/: minimax.py  tres_en_raya.py  tres_en_raya_pygame.py
