[project]
name = "mi-proyecto-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.5.0,<4.0.0)",
    "numpy (>=1.21.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mi_proyecto_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
