[project]
name = "tic-tac-toe-minimax-game"
version = "1.0.0"
description = "Juego de Tres en Raya con IA usando algoritmo Minimax y análisis matemático"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.6.1,<3.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "numpy>=1.21.0,<2.0.0"
]
keywords = ["game", "tic-tac-toe", "minimax", "ai", "pygame", "mathematics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.poetry]
packages = [{include = "tic_tac_toe_minimax_game", from = "src"}]

[tool.poetry.scripts]
dev = "tic_tac_toe_minimax_game.tres_en_raya_pygame:main"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
